# LServer

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml
lserver/: alerts.py  cli.py  core.py  daemon.py  db.py  groups.py  state.py  templates.py  ui.py  updater.py
lserver/web/: __init__.py  api.py  auth.py  server.py
lserver/web/static/: index.html
