[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lserver"
version = "1.0.0"
description = "Herramienta CLI para gestionar nodos en VPS con screen."
authors = [{ name = "SrxMateo" }]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
lserver = "lserver.cli:main"

[tool.setuptools]
packages = ["lserver"]
