[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lserver"
version = "3.0.0"
description = "CLI profesional para gestionar servidores en VPS. Zero dependencies."
authors = [{ name = "SrxMateo" }]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
lserver = "lserver.cli:main"

[tool.setuptools]
packages = ["lserver", "lserver.web"]

[tool.setuptools.package-data]
"lserver.web" = ["static/*.html", "static/**/*"]
